gitops/platform-apps/velero-ui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velero-ui
  namespace: velero-ui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`velero-ui.__ZONE_NAME__`)
      services:
        - kind: Service
          name: velero-ui
          port: 3000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velero-ui-netbird
  namespace: velero-ui
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`velero-ui.__ZONE_NAME__`)
      services:
        - kind: Service
          name: velero-ui
          port: 3000
